# ExoSim2-public

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.rst  CITATION.cff  CODE_OF_CONDUCT.md  LICENSE  README.md  codemeta.json  coverage.yml  noxfile.py  pyproject.toml  pytest.ini  setup.cfg
.github/workflows/: build.yml  ci_linux.yml
docs/source/: CHANGELOG.rst  FAQs.rst  conf.py  index.rst  installation.rst  license.rst
docs/source/_static/: exosim.css
docs/source/_templates/: developer_index.html  index.html  layout.html  user_index.html
docs/source/contributing/: custom_tasks.rst  guidelines.rst  index.rst  runConfig.rst  signals.rst  tasks.rst
docs/source/mpl_examples/: createPlanckStar.py  create_psf_airy.py  create_psf_gauss.py  create_psf_gauss_fnum.py  find_elliptical_aperture.py  find_rectangular_aperture.py  parseSource.py  parseSources.py  rebin.py
docs/source/user/: index.rst  quickstart.rst
docs/source/user/focal_plane/: channel.rst  focal_plane_array.rst  foregrounds.rst  general.rst  index.rst  optical_paths.rst  pipeline.rst  pointing.rst  resulting_focal_plane.rst  sky_sources.rst
docs/source/user/ndrs/: accumulate.rst  analogtodigtital.rst  cosmic_rays.rst  darkcurrent.rst  dead_pixels.rst  gain_drift.rst  index.rst  pipeline.rst  pixel_non_linearity.rst  readnoise.rst  reset_bias.rst  results.rst  shot_noise.rst
docs/source/user/plotter/: index.rst
docs/source/user/radiometric_model/: estimate_apertures.rst  estimate_signal.rst  index.rst  multiaccum.rst  photon_noise.rst  (+4 more)
examples/: example_pipeline.ipynb  example_pipeline.py  example_tools.py  loadOptics_example.py  main_example.xml  payload_example.xml  photometer.xml  plot_signal.py  sky_example.xml  spectrometer.xml  tools_input_example.xml
examples/data/: HD209458b.csv  ldc_example.csv
examples/data/payload/: dp_map_Photometer.csv  dp_map_Spectrometer.csv  plot_dp_map.py  qe_map.h5  spec-wl_sol.ecsv  table_generator.py
exosim/: __init__.py  exosim.py
exosim/log/: __init__.py
exosim/models/: channel.py  signal.py
exosim/models/utils/: cachedData.py
exosim/output/: __init__.py  output.py  setOutput.py  utils.py
exosim/output/hdf5/: __init__.py  hdf5.py  utils.py
exosim/plots/: __init__.py  focalPlanePlotter.py  radiometricPlotter.py  subExposuresPlotter.py  utils.py
exosim/recipes/: createFocalPlane.py  createNDRs.py  createSubExposures.py  radiometricModel.py
exosim/tasks/: chainTask.py  task.py
exosim/tasks/astrosignal/: applyAstronomicalSignal.py  estimateAstronomicalSignal.py  estimatePlanetarySignal.py  findAstronomicalSignals.py
exosim/tasks/detector/: __init__.py  addConstantDarkCurrent.py  addCosmicRays.py  addGainDrift.py  addKTC.py  addReadNoise.py  addReadNoiseMapNumpy.py  addShotNoise.py  analogToDigital.py  applyDeadPixelMap.py  applyDeadPixelMapNumpy.py  applyPixelsNonLinearity.py  applySimpleSaturation.py  loadPixelsNonLinearityMapNumpy.py  mergeGroups.py
exosim/tasks/foregrounds/: __init__.py  estimateZodi.py
exosim/tasks/instrument/: __init__.py  applyIntraPixelResponseFunction.py  computeSaturation.py  computeSolidAngle.py  createFocalPlaneArray.py  createIntrapixelResponseFunction.py  createOversampledIntrapixelResponseFunction.py  foregroundsToFocalPlane.py  loadPsfPaos.py  loadResponsivity.py  loadWavelengthSolution.py  populateFocalPlane.py  propagateForegrounds.py  propagateSources.py
exosim/tasks/load/: __init__.py  loadOpticalElement.py  loadOptions.py
exosim/tasks/parse/: __init__.py  parseSource.py  parseZodi.py
exosim/tasks/radiometric/: __init__.py  aperturePhotometry.py  computePhotonNoise.py  computeSignalsChannel.py  computeSubFrgSignalsChannel.py  estimateSpectralBinning.py
exosim/tasks/sed/: __init__.py  loadCustom.py  loadPhoenix.py  prepareSed.py
exosim/tasks/subexposures/: __init__.py  addForegrounds.py  applyQeMap.py  estimateChJitter.py  instantaneousReadOut.py  loadQeMapNumpy.py  prepareInstantaneousReadOut.py
exosim/tools/: darkCurrentMap.py  deadPixelsMap.py  exosimTool.py  pixelsNonLinearity.py  pixelsNonLinearityFromCorrection.py  quantumEfficiencyMap.py  readoutSchemeCalculator.py
exosim/utils/: aperture.py  binning.py  checks.py  grids.py  iterators.py  operations.py  prepare_recipes.py  psf.py  runConfig.py  timed_class.py  types.py
src/exosim/: __init__.py  exosim.py
src/exosim/log/: __init__.py  logger.py
src/exosim/models/: channel.py  signal.py
src/exosim/output/: setOutput.py  utils.py
src/exosim/plots/: focalPlanePlotter.py  ndrsPlotter.py  plotter.py  radiometricPlotter.py  utils.py
src/exosim/recipes/: __init__.py  createFocalPlane.py  createNDRs.py  createSubExposures.py  radiometricModel.py
src/exosim/tasks/: chainTask.py  task.py
src/exosim/tools/: __init__.py  adcGainEstimator.py  darkCurrentMap.py  deadPixelsMap.py  exosimTool.py  pixelsNonLinearity.py  pixelsNonLinearityFromCorrection.py  quantumEfficiencyMap.py  readoutSchemeCalculator.py
src/exosim/utils/: __init__.py  aperture.py  ascii_arts.py  binning.py  checks.py  convolution.py  focal_plane_locations.py  grids.py  klass_factory.py  prepare_recipes.py  psf.py  runConfig.py  timed_class.py  types.py
tests/: conftest.py  cosmic.csv  inputs.py  test_astrosignal.py  test_cachedData.py  test_detector.py  test_foreground.py  test_instantaneous_readout.py  test_instrument.py  test_logger.py  test_optics.py  test_options.py  test_output.py  test_path.py  test_psf.py  test_radiometric.py  test_recipes.py  test_signal.py  test_sources.py  test_subexposures.py  test_task.py  test_tools.py  test_utils.py
tests/regression_data/: main_example.xml  main_example_single.xml  payload_example_single.xml  sky_example.xml  spectrometer.xml  telescope.xml
tests/test_data/: dc_map.npy  main_example.xml  output_test.h5  output_test_cr.h5  output_test_jit.h5  output_test_jit_resampled.h5  output_test_no_jit.h5  payload_example.xml  payload_test_static.xml  photometer.xml  tools_input_example.xml
tests/test_data/test_data/: output_test_jit.h5  output_test_jit_resampled.h5  output_test_no_jit.h5
(+86 files in other folders)
