[metadata]
name = exosim
version = v2.0.0-rc0
author = L. V. Mugnai, E. Pascale, A. Bocchieri, A. Lorenzani, A. Papageorgiou
author_email = lorenzo.mugnai@uniroma1.it
description = ExoSim 2 is the next generation of the Exoplanet Observation Simulator (ExoSim) 
			tailored for spectro-photometric observations of transiting exoplanets from space, ground, 
			and sub-orbital platforms. This software is a complete rewrite implemented in Python 3, 
			embracing object-oriented design principles, which allow users to replace each component with their functions when required.

long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Claus
license_files = LICENSE
url = https://github.com/arielmission-space/ExoSim2-public
project_urls = 
	Bug Tracker = https://github.com/arielmission-space/ExoSim2-public/issues
	Source Code = https://github.com/arielmission-space/ExoSim2-public
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
	Development Status :: 5 - Production/Stable
	Environment :: Console
	Intended Audience :: Developers
	Intended Audience :: Science/Research
	Topic :: Scientific/Engineering
	Topic :: Software Development :: Libraries

[options]
zip_safe = True
include_package_data = True
python_requires = >3.7
install_requires = 
	astropy >= 4.2.1
	matplotlib >= 3.5.2
	mpmath >= 1.1.0
	numpy >= 1.20.3
	scipy >= 1.6.2
	decorator >= 4.4.2
	h5py >= 3.3.0
	joblib >= 1.0.1
	numba >= 0.54.0
	photutils >= 1.1.0
	requests >= 2.25.1
	pyyaml >= 5.4
	tqdm

[options.extras_require]
docs = 
	sphinx~=4.5
	sphinxcontrib-napoleon
	sphinxcontrib-jsmath
	nbsphinx
	pydata-sphinx-theme
	sphinx-panels
	sphinx-autoapi
	sphinx-autobuild
	sphinx-design
	sphinxcontrib_serializinghtml
	docutils

test = 
	codecov
	flake8
	pytest
	batman-package

[options.entry_points]
console_scripts = 
	exosim=exosim.exosim:help [All]
	exosim-focalplane=exosim.exosim:focalplane [FocalPlane]
	exosim-radiometric=exosim.exosim:radiometric [Radiometric]
	exosim-sub-exposures=exosim.exosim:subexposures [SubExposures]
	exosim-ndrs=exosim.exosim:ndrs [NDRs]
	exosim-plot=exosim.plots.plotter:main [Plot]
